syntax = 'proto3';

package services.auth;

import "models/user.proto";

message AuthLogin {
  string login = 1;
  string password = 2;
}

message AuthRefresh {
  string refreshToken = 1;
}

message AuthTokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message AuthData {
  models.user.User user = 1;
  AuthTokens tokens = 2;
}